@@ -16,6 +16,9 @@ Morten :
 Rodrigo :
 	* Update gda support.
 
+Nakai :
+	* Over-the-Spot style support for XIM.
+
 --------------------------------------------------------------------------
 Gnumeric 0.67
 
