@@ -1,3 +1,8 @@
+2001-07-06  Yukihiro Nakai  <nakai@gnome.gr.jp>
+
+	* src/gnumeric-sheet.c (gnumeric_sheet_realize) : Over-the-Spot
+	  style support for XIM.
+
 2001-07-05  Jody Goldberg <jgoldberg@home.com>
 
 	* src/sheet-control-gui.c (scg_make_cell_visible) : simplify.  There
